notmuch (0.15~rc1-1) experimental; urgency=low

  * New upstream release candidate.
  * Change priority to optional (Closes: #687217).
  * Remove Dm-Upload-Allowed field, as this is no longer used by
    Debian.

 -- David Bremner <bremner@debian.org>  Mon, 07 Jan 2013 21:40:52 -0400

notmuch (0.14-1) experimental; urgency=low

  [ Stefano Zacchiroli ]
  * notmuch-mutt: fix tag action invocation (Closes: #678012)
  * Use notmuch-search-terms manpage in notmuch-mutt (Closes: #675073).

  [ David Bremner ]
  * Do a better job of cleaning up after configuration and testing
    (Closes: #683505)
  * Alternately depend on emacs24 instead of emacs23 (Closes: #677900).
  * New upstream version
    - incompatible changes to dump/restore syntax
    - bug fixes for maildir synchronization

 -- David Bremner <bremner@debian.org>  Tue, 21 Aug 2012 10:39:33 +0200

notmuch (0.13.2-1) unstable; urgency=low

  * Upstream bugfix release. No changes to binary packages.

 -- David Bremner <bremner@debian.org>  Sat, 02 Jun 2012 18:16:01 -0300

notmuch (0.13.1-1) unstable; urgency=low

  * Upstream bugfix release.
    - fix for encoding problems with reply in emacs
    - notmuch_database_(get_directory|find_message_by_filename) now
      work for read-only databases.

 -- David Bremner <bremner@debian.org>  Fri, 25 May 2012 21:19:06 -0300

notmuch (0.13-1) unstable; urgency=low

  * New upstream release. See /usr/share/doc/notmuch/NEWS.gz for changes.

  [ Stefano Zacchiroli ]
  * Recommend all notmuch UI (including notmuch-mutt) as alternatives,
    to avoid unneeded vim/emacs installation. Thanks Matteo F. Vescovi
    for the patch. (Closes: #673011)

 -- David Bremner <bremner@debian.org>  Tue, 15 May 2012 18:19:32 -0300

notmuch (0.13~rc1-2) experimental; urgency=low

  * New upstream pre-release
  * new binary package "notmuch-mutt" for Mutt integration
  * Bump libnotmuch SONAME because of API changes

 -- David Bremner <bremner@debian.org>  Sat, 05 May 2012 10:26:47 -0300
