@@ -1,1 +1,1 @@
-usr/lib/python*
+usr/lib/python2*
